Bug 608778: Rename JSString::MUTABLE to JSString::EXTENSIBLE. (r=jorendorff)